<resources>
    <string name="app_name">Pomodoro app</string>
    <string name="start_btn">START</string>
    <string name="right_btn">STOP</string>
    <string name="left_btn">START</string>
    <string name="option_btn_descr">Button to parameters</string>
    <string name="pause_btn_lbl">PAUSE</string>
    <string name="resume_btn_lbl">RESUME</string>
    <string name="done_btn_lbl">DONE</string>
    <string name="start_btn_lbl">START</string>
    <string name="stop_btn_lbl">STOP</string>
    <string name="menu_item_title_timer">Timer</string>
    <string name="menu_item_title_pomodoros">Pomodoros</string>
    <string name="menu_item_title_timers">Timers</string>
    <string name="pause_interval_label"># pomodoros before long pause:</string>
    <string name="fab_add_timer_descr">Add a timer</string>
    <string name="edit_timer_name">Name:</string>
    <string name="pomodoro_length_label">Pomodoro length (minutes):</string>
    <string name="pause_length_label">Pause length (minutes):</string>
    <string name="long_pause_length_label">Long pause length (minutes):</string>
    <string name="save_btn">SAVE</string>
    <string name="delete_btn">DELETE</string>
    <string name="checkmark_descr">Indicate the selected timer</string>
    <string name="menu_item_title_stats">Stats</string>
    <string name="pomodoro_count_label"># of completed pomodoros:</string>
    <string name="avg_pomodoro_time_label">Average pomodoro time:</string>
    <string name="most_pomodoros_completed_label">Day with most pomodoros completed:</string>
</resources>