<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TimerEditActivity"
    android:orientation="vertical">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TableRow
            android:orientation="horizontal">
            <TextView
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:layout_weight="20"
                android:text="@string/edit_timer_name"/>

            <EditText
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:layout_weight="80"
                android:textAlignment="textEnd"
                android:id="@+id/editTimerName"
                android:maxLength="50"/>
        </TableRow>

        <TableRow
            android:orientation="horizontal">
            <TextView
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:layout_weight="70"
                android:text="@string/pomodoro_length_label"/>
            <EditText
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:layout_weight="30"
                android:id="@+id/editPomodoroLength"
                android:inputType="number" />
        </TableRow>

        <TableRow
            android:orientation="horizontal">
            <TextView
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:layout_weight="70"
                android:text="@string/pause_length_label"/>
            <EditText
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:layout_weight="30"
                android:id="@+id/editPauseLength"
                android:inputType="number" />
        </TableRow>

        <TableRow
            android:orientation="horizontal">
            <TextView
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:layout_weight="70"
                android:text="@string/long_pause_length_label" />

            <EditText
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:layout_weight="30"
                android:id="@+id/editLongPauseLength"
                android:inputType="number" />
        </TableRow>

        <TableRow
            android:orientation="horizontal">
            <TextView
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:layout_weight="70"
                android:text="@string/pause_interval_label" />

            <EditText
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:layout_weight="30"
                android:id="@+id/editPauseIntervals"
                android:inputType="number" />
        </TableRow>
    </TableLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginBottom="120dp"
        android:layout_marginTop="50dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/saveBtn"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginHorizontal="15dp"
            android:layout_weight="85"
            android:text="@string/save_btn"
            android:onClick="saveTimer" />

        <Button
            android:id="@+id/deleteBtn"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:layout_marginHorizontal="15dp"
            android:layout_weight="85"
            android:text="@string/delete_btn"
            android:backgroundTint="@color/red"
            android:onClick="deleteTimer" />
    </LinearLayout>
</LinearLayout>