<?xml version="1.0" encoding="utf-8"?>
<TableLayout
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:paddingHorizontal="5dp"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="80"
            android:text="@string/pomodoro_count_label" />
        <TextView
            android:id="@+id/pomodoroCount"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textAlignment="textEnd"
            android:layout_weight="20" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="80"
            android:text="@string/avg_pomodoro_time_label"/>
        <TextView
            android:id="@+id/pomodoroAvgTime"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textAlignment="textEnd"
            android:layout_weight="20" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="80"
            android:text="@string/most_pomodoros_completed_label"/>
        <TextView
            android:id="@+id/pomodoroMostDate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textAlignment="textEnd"
            android:layout_weight="20" />
    </TableRow>
</TableLayout>