<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="10dp">

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:id="@+id/timerName"
            android:layout_gravity="center_vertical"
            android:textSize="20sp"/>
        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="20dp"
            android:paddingEnd="20dp">
                <TableRow
                    android:orientation="horizontal">
                        <TextView
                            android:layout_height="wrap_content"
                            android:layout_width="0dp"
                            android:layout_weight="70"
                            android:text="@string/work_time_label"/>

                        <TextView
                            android:layout_height="wrap_content"
                            android:layout_width="0dp"
                            android:layout_weight="30"
                            android:textAlignment="textEnd"
                            android:id="@+id/workLength" />
                </TableRow>

                <TableRow
                    android:orientation="horizontal">
                    <TextView
                        android:layout_height="wrap_content"
                        android:layout_width="0dp"
                        android:layout_weight="70"
                        android:text="@string/pause_length_label"/>
                    <TextView
                        android:layout_height="wrap_content"
                        android:layout_width="0dp"
                        android:layout_weight="30"
                        android:textAlignment="textEnd"
                        android:id="@+id/pauseLength" />
                </TableRow>

                <TableRow
                    android:orientation="horizontal">
                        <TextView
                            android:layout_height="wrap_content"
                            android:layout_width="0dp"
                            android:layout_weight="70"
                            android:text="@string/long_pause_length_label" />

                        <TextView
                            android:layout_height="wrap_content"
                            android:layout_width="0dp"
                            android:layout_weight="30"
                            android:textAlignment="textEnd"
                            android:id="@+id/longPauseLength" />
                </TableRow>

                <TableRow
                    android:orientation="horizontal">
                        <TextView
                            android:layout_height="wrap_content"
                            android:layout_width="0dp"
                            android:layout_weight="70"
                            android:text="@string/pause_interval_label" />

                        <TextView
                            android:layout_height="wrap_content"
                            android:layout_width="0dp"
                            android:layout_weight="30"
                            android:textAlignment="textEnd"
                            android:id="@+id/pauseIntervals" />
                </TableRow>
        </TableLayout>
</LinearLayout>
